k8s/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame-deployment
  namespace: dev  # 👈 окружение можно менять при деплое
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
        - name: boardgame
          image: harbor.local.lab/library/myapp:${BUILD_NUMBER} # 👈 Jenkins подставит тег
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: boardgame-svc
  namespace: dev
spec:
  selector:
    app: boardgame
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
