k8s/deployment-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame-deployment
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
        - name: boardgame
          image: harbor.local.lab/library/myapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: boardgame-svc
  namespace: prod
spec:
  selector:
    app: boardgame
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
