k8s/deploymentprox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame
  namespace: production
  labels:
    app: boardgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: boardgame
          image: harbor.local.lab/library/boardgame:latest   #  Harbor
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      imagePullSecrets:
        - name: harbor-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
  namespace: production
  labels:
    app: boardgame
spec:
  type: LoadBalancer
  selector:
    app: boardgame
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress
  namespace: production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: boardgame.local.lab        # запись в локальном DNS, запись A с IP от metallb
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boardgame-service
                port:
                  number: 80
  tls:
    - hosts:
        - boardgame.local.lab          #  хост который в DNS
      secretName: boardgame-tls
